--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,6 +82,18 @@ a{
     transition: background-color 0.3s;
 }
 
+@media only screen and (min-width: 768px){
+    .project{
+        text-align: center;
+        background-color: white;
+        color:black;
+        margin-bottom: 1em;
+        padding:1em;
+        width:300px;
+        transition: background-color 0.3s;
+    }
+}
+
 .project:hover, .project:focus{
     background-color: lightgray;
 }
