--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,7 +51,7 @@ body{
         
 }
 
-a,h1,h2{
+a,h1,h2,h3{
     text-decoration: none;
     font-family: Acherus Grotesque Regular, sans-serif;
     
